# chisel-json

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  README.tpl  baseline.sh  benchmark.sh  cliff.toml  profile.sh  run_profiling.sh  rusty-tags.vi
.github/workflows/: rust.yml
benches/: blog_entries.rs  dom_parsing.rs  lexing.rs  parsing.rs  sax_parsing.rs  scanner.rs  simple_schema.rs  simple_structure.rs  twitter.rs
examples/: distinct_object_paths.rs  distinct_object_pointers.rs  distinct_paths.rs  distinct_pointers.rs
fixtures/json/: bc_block.json  blog_entries.json
fixtures/json/invalid/: invalid_1.json
fixtures/json/valid/: bc_block.json  nested_arrays.json
fixtures/samples/json/: simple_1.json
fixtures/samples/utf-8/: invalid_numbers.txt  numbers.txt
fixtures/utf-8/: dodgy_strings.txt  invalid_numbers.txt  numbers.txt  strings.txt
src/: coords.rs  decoders.rs  dom.rs  errors.rs  events.rs  input_state.rs  lexer.rs  lexer_input.rs  lexer_old.rs  lib.rs  parser.rs  parser_errors.rs  paths.rs  pointer.rs  sax.rs  scanner.rs  test_macros.rs
src/parser/: dom.rs  mod.rs  parser.rs  sax.rs
src/test/: lexer.rs  scanner.rs
tests/: lexer.rs  scanner.rs
tests/fixtures/samples/utf-8/: invalid_numbers.txt  numbers.txt
