[package]
name = "chisel-json"
version = "0.1.2"
edition = "2021"
authors = ["Jonny Coombes <jcoombes@jcs-software.co.uk>"]
rust-version = "1.56"
description = "Another JSON parser for Rust"
license = "MIT OR Apache-2.0"
keywords = ["json", "parser"]
categories = ["parser-implementations", "text-processing"]
repository = "https://github.com/jonnycoombes/chisel-json"

[dependencies]
fast-float = "0.2.0"
chisel-decoders = "1.0.1"

[dev-dependencies]
bytesize = "1.2.0"
criterion = {version ="0.4.0", features = ["html_reports"]}
pprof = {version = "0.11.1", features = ["flamegraph", "criterion", "protobuf"]}

[[bench]]
name = "dom_parsing"
harness = false

[[bench]]
name = "lexing"
harness = false
