[package]
name = "chisel-json"
version = "0.1.9"
edition = "2021"
authors = ["Jonny Coombes <jcoombes@jcs-software.co.uk>"]
rust-version = "1.56"
description = "Simple JSON parser for Rust"
license = "MIT OR Apache-2.0"
keywords = ["json", "parser"]
categories = ["parser-implementations", "text-processing"]
repository = "https://github.com/jonnycoombes/chisel-json"

[dependencies]
fast-float = "0.2.0"
lexical={version = "6.1.1", features = ["parse-floats", "parse-integers"], optional = true}
chisel-decoders = "1.0.4"

[dev-dependencies]
bytesize = "1.2.0"
criterion = {version ="0.4.0", features = ["html_reports"]}
pprof = {version = "0.11.1", features = ["flamegraph", "criterion", "protobuf"]}

[features]
default = ["mixed_numerics", "default_utf8_encoding"]
mixed_numerics = ["lexical"]
default_utf8_encoding = []

[[bench]]
name = "dom_parsing"
harness = false

[[bench]]
name = "sax_parsing"
harness = false

[[bench]]
name = "lexing"
harness = false
